--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -16,9 +16,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-28 15:11+0000\n"
-"Last-Translator: Mathieu B <mathieu@brab.ca>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -135,8 +135,8 @@ msgid "Case Activity"
 msgstr "Activité du dossier"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Rapport du dossier"
+msgid "Case Activity Audit"
+msgstr "Vérification des activités du dossier"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -155,8 +155,8 @@ msgid "Assign to Another Client"
 msgstr "Assigner à un autre client"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Créer l'activité vers le dossier"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -180,10 +180,6 @@ msgstr "États du dossier"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Médias de rencontres"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Changer le statut de l'activité"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -258,6 +254,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Types financiers"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Nouveau paiement"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -275,9 +275,15 @@ msgstr "Cartes de crédit acceptées"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Types de crédits indirects"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Contributions"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Contributions récurrentes"
@@ -328,6 +334,23 @@ msgstr "Lots de comptabilité"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Exportation de lot de comptabilité"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Voir le paiement"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Paramètres des contributions"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Facture PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Envoi de facture par courriel"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -481,6 +504,11 @@ msgstr "Préférences de recherche"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Préférences de dates"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu de navigation"
 
@@ -514,10 +542,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Planifier les rappels"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Ceci ne devrait jamais être vu"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -535,6 +559,11 @@ msgstr "Formats d'impression de page (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Options liées aux formules de communication"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formules de salutation par courriel"
 
@@ -548,8 +577,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Formats de destinataires"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr "Langue, devises et localisation"
 
 #: xml/templates/civicrm_navigation.tpl
@@ -701,10 +731,6 @@ msgid "Administer CiviCRM"
 msgstr "Administrer CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Option des valeurs"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Grilles de prix"
 
@@ -772,10 +798,6 @@ msgstr "Constructeur de recherches personnalisées"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Recherches personnalisées"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Recherche simple"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -867,6 +889,10 @@ msgid "CiviCRM Blog"
 msgstr "Journal-Blog CiviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Indicateur du dossier"
 
@@ -921,6 +947,10 @@ msgid "Import Activities"
 msgstr "Importer des activités"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Importer une liste à choix multiples personnalisée"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Mettre à jour CiviCRM"
 
@@ -957,12 +987,16 @@ msgid "Browse Uploaded files"
 msgstr "Explorer les fichiers téléchargés"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "Supprimer le fichier"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Se déconnecter"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "API CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -976,6 +1010,10 @@ msgstr "UnitéQ"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "Éditeur de profil"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Dates de confirmation"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1072,6 +1110,10 @@ msgid "Event Online Registration"
 msgstr "Enregistrement en ligne à l'événement"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Créneaux de Conference"
 
@@ -1105,6 +1147,10 @@ msgstr "Retirer Du Panier"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Voir le Panier"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Modifier les choix de frais d'inscription"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1159,8 +1205,8 @@ msgid "Resubscribe"
 msgstr "Renouvellement d'adhésion"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Se déinscrire complètement"
+msgid "Opt-out"
+msgstr "Désabonnement"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1295,6 +1341,11 @@ msgstr "Liste de rapports"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Nouvelles CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1433,6 +1484,16 @@ msgstr "Rechercher un envoi groupé de SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Nouveau test A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Gérer les tests A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Rapports des adhésions"
 
@@ -1538,11 +1599,6 @@ msgstr "Localisation"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Langue, devises et localisation"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Options de langue préférée"
 
@@ -1560,6 +1616,11 @@ msgstr "Permissions (contrôle d'accès)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Paramètres système"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1628,6 +1689,11 @@ msgstr "Subventions"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Statut de la subvention"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "Adhésions"
 
@@ -1638,8 +1704,13 @@ msgstr "Tous les rapports"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Aide"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1648,18 +1719,43 @@ msgstr "Documentation"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Forums de la communauté"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Participer"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "À propos"
+msgid "About CiviCRM"
+msgstr "À propos de CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Développeur"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "API Explorateur"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Documents à destination des développeurs"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1886,6 +1982,11 @@ msgstr "Fournit des détails de transaction pour toutes les contributions et pai
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Fournit des informations sur le statut des contributions récurrentes"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Résumé d'adhésion"
 
@@ -2055,144 +2156,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Compte rendu détaillé des démarchages, routes de sollicitation et autres sondages."
 
-msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Vérification des activités du dossier"
-
-msgctxt "menu"
-msgid "New Payment"
-msgstr "Nouveau paiement"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Types de crédits indirects"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "View Payment"
-msgstr "Voir le paiement"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Options liées aux formules de communication"
+msgid "Configure CKEditor"
+msgstr ""
 
 msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Importer une liste à choix multiples personnalisée"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
 
 msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Modifier les choix de frais d'inscription"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Grant Status"
-msgstr "Statut de la subvention"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer"
-msgstr "Développeur"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "API Explorer"
-msgstr "API Explorateur"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Documents à destination des développeurs"
+msgid "Insert CiviCRM Content"
+msgstr ""
 
 msgctxt "menu"
-msgid "File on Case"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Paramètres des contributions"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Facture PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Envoi de facture par courriel"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Préférences de dates"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Supprimer le fichier"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "API CiviCRM"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Dates de confirmation"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Désabonnement"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Nouveau test A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Gérer les tests A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get started"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Ask a question"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Get expert help"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "À propos de CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Join CiviCRM"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Fournit des informations sur le statut des contributions récurrentes"
+msgid "Pledge Detail"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
