--- a/po/fr_FR/grant.po
+++ b/po/fr_FR/grant.po
@@ -12,9 +12,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-04 10:21+0000\n"
-"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,14 +41,6 @@ msgstr "Date d'échéance de la subvention est NULL."
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Date de la décision de la subvention est NULL."
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Type de subvention %2 '%1'"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Statut de la subvention %2 '%1'"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -95,10 +87,6 @@ msgid "Grant report received"
 msgstr "Rapport de subvention reçu"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "ID du type de subvention"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Montant octroyé"
 
@@ -110,10 +98,6 @@ msgstr "Devise de la subvention"
 msgid "Grant Rationale"
 msgstr "Raison de la subvention"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "ID du statut de la subvention"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Rapport de Subvention reçu ?"
@@ -121,6 +105,10 @@ msgstr "Rapport de Subvention reçu ?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Montant requis<br /> (devise originelle)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Candidat"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -131,12 +119,10 @@ msgid "Delete Grants"
 msgstr "Supprimer les subventions"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Subvention(s) supprimée(s): %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Total des subvention(s) sélectionnée(s) : %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "%count subventions ont été supprimés."
+msgstr[1] "%count subventions ont été supprimés."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -147,30 +133,46 @@ msgid "Update Grants"
 msgstr "Mettre à jour les subventions"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Subvention(s) mise(s) à jour : %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Subvention(s) mise(s) à jour : %1 (Nombre total sélectionné: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "accéder à CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "Voir toutes les subventions"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "Modifier les subventions"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Créer et mettre à jour les subventions"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "supprimer dans CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Supprimer les subventions"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "Subventions"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Subvention de"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "Voir les subventions"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Modifier la subvention"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Voulez vous modifier cette étiquette?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Supprimer la subvention"
 
@@ -183,16 +185,8 @@ msgid "Granted"
 msgstr "Accepté"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Imprimer les subventions"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Exporter les subventions"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "Nouvelle subvention"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -213,6 +207,14 @@ msgstr "Date à laquelle l'argent de la subventin a été transféré"
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(devise initiale)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Statut(s) de la subvention"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Type(s) de subvention"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -306,61 +308,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "Cette page liste toutes les subventions pour %1 depuis le début."
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Cliquez <a accesskey='N' href='%1'>Nouvelle subvention</a> afin d'enregistrer une subvention pour ce contact."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "Cliquez <a %1>Nouvelle subvention</a> afin d'enregistrer une subvention pour ce contact."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "Aucune subvention n'a été enregistrée pour ce contact."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Candidat"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Subvention(s) mise(s) à jour : %1 (Nombre total sélectionné: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Cliquez <a %1>Nouvelle subvention</a> afin d'enregistrer une subvention pour ce contact."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "%count subventions ont été supprimés."
-msgstr[1] "%count subventions ont été supprimés."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "accéder à CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "Voir toutes les subventions"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "Modifier les subventions"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Créer et mettre à jour les subventions"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "supprimer dans CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Supprimer les subventions"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Statut(s) de la subvention"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Type(s) de subvention"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
