--- a/po/fr_FR/extension.po
+++ b/po/fr_FR/extension.po
@@ -12,9 +12,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-04 09:18+0000\n"
-"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,11 +31,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "Le serveur ne peut écrire dans le répertoire cache des extensions (%1). Vous pouvez aller sur cette <a href=\"%2\">page</a> pour changer le chemin d'accès au répertoire."
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "Pas de recherche d'extension sur l'URL distante car ext_repo_url est configuré à faux."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -57,10 +52,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "Il n'y a pas actuellement d'extension CiviCRM publique qui soit compatible avec la version %2 (<a href=\"%1\">extensions d'ici</a>). Si vous voulez installer une extension marquée comme non compatible, vous devez <a href=\"%3\">télécharger et installer une extension manuellement</a> (il vous faudra avoir accès à votre serveur web).<br />"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Aucune extension disponible pour cette version"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -118,6 +109,13 @@ msgid ""
 msgstr "Vous ne pouvez pas installer d'extension actuellement parce que votre installation de PHP ne permet pas de traiter les archives ZIP. Vous devez demander à votre administrateur système d'installer l'extension standard PHP-ZIP."
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "ATTENTION : l'installateur est peut-être incapable de télécharger les documents qui nécessitent une redirection HTTP. Cela peut être dû à un problème de configuration PHP avec open_basedir ou safe_mode."
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "Impossible d'extraire l'extension: mauvaise structure du répertoire"
 
@@ -161,9 +159,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "Une copie de l'extension (%1) est dans un dossier système (%2). La copie système sera conservée, mais une nouvelle copie sera utilisée."
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "ATTENTION : l'installateur est peut-être incapable de télécharger les documents qui nécessitent une redirection HTTP. Cela peut être dû à un problème de configuration PHP avec open_basedir ou safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
