--- a/po/id_ID/grant.po
+++ b/po/id_ID/grant.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-11-27 22:35+0000\n"
-"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,14 +37,6 @@ msgstr "Tanggal Jatuh Tempo Hibah NIHIL"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Tanggal Keputusan Hibah NIHIL"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Jenis Hibah %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Keadaan Hibah %2 &1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -91,10 +83,6 @@ msgid "Grant report received"
 msgstr "Laporan hibah diterima"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "Id Jenis Hibah"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Bilangan dihibahkan"
 
@@ -106,10 +94,6 @@ msgstr "Mata Uang Hibah"
 msgid "Grant Rationale"
 msgstr "Alasan Hibah"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "Id Keadaan Hibah"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Laporan Hibah Diterima?"
@@ -117,6 +101,10 @@ msgstr "Laporan Hibah Diterima?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Bilangan diminta<br />(mata uang asli)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Pemohon"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -127,12 +115,9 @@ msgid "Delete Grants"
 msgstr "Hapus Hibah"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Hibah Terhapus: %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Jumlah Hibah Terpilih: %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "%count hibah dihapus."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -143,30 +128,46 @@ msgid "Update Grants"
 msgstr "Perbaharui Hibah"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Hibah Terbaharui: %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Hibah Terbaharui: %1 (Jumlah Terpilih: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "akses CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "Tampilkan semua hibah"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "sunting hibah"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Buat dan perbaharui hibah"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "hapus di CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Hapus hibah"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "hibah"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Hibah oleh"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "Lihat Hibah"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Sunting Hibah"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Anda yakin ingin menghapus hibah ini?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Hapus Hibah"
 
@@ -179,16 +180,8 @@ msgid "Granted"
 msgstr "Dihibahkan"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Cetak Hibah"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Keluarkan Hibah"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "HibahBaru"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -209,6 +202,14 @@ msgstr "Tanggal dimana uang hibah dipindahkan."
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(mata uang asli)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Keadaan Hibah"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Jenis hibah"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -302,60 +303,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "Halaman ini menampilkan semua hibah untuk %1 sejak permulaan."
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Klik <a accesskey='N' href='%1'>Tambah Hibah</a> untuk merekam hibah untuk kontak ini."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "klik <a %1>Tambah Hibah</a> untuk merekan Hibah untuk kontak ini."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "Tidak ada hibah yang direkam untuk kontak ini."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Pemohon"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Hibah Terbaharui: %1 (Jumlah Terpilih: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "klik <a %1>Tambah Hibah</a> untuk merekan Hibah untuk kontak ini."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "%count hibah dihapus."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "akses CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "Tampilkan semua hibah"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "sunting hibah"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Buat dan perbaharui hibah"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "hapus di CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Hapus hibah"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Keadaan Hibah"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Jenis hibah"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
